add code improvement

--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Kamień, papier, nożyce</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <div id="buttons"></div>
-            <button id="play-rock">Kamień</button>
-            <button id="play-paper">Papier</button>
-            <button id="play-scissors">Nożyce</button>
-        <div id="messages"></div>
+        <div class="row">
+            <img class="mw-100 col-2 justify-content-center align-items-center" src="https://boardgamestrategyblog.files.wordpress.com/2016/12/rock-paper-scissors.png" alt="Max-width 100%"/>
+            <div class="col-8"></div>
+        </div>
     </div>
+    <div class="container">
+        <h1 class="justify-content-center align-items-center">ZAGRAJMY W GRĘ!</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4" id="buttons">
+                <button id="play-rock" class="btn btn-warning btn-lg">Kamień</button>
+                <button id="play-paper" class="btn btn-warning btn-lg">Papier</button>
+                <button id="play-scissors" class="btn btn-warning btn-lg">Nożyce</button>
+                <div id="messages"></div>
+            </div>
+        </div>
+    </div>
+
     <script src="js/functions.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/js/bootstrap.min.js" integrity="sha384-XEerZL0cuoUbHE4nZReLT7nx9gQrQreJekYhJD9WNWhH8nEW+0c5qq7aIo2Wl30J" crossorigin="anonymous"></script>
 </body>
 </html>
